[MIM-5] action bar, status bar 수정
noaction bar로 테마변경
status bar 색상 변경 및 status bar icon 색상 수정

--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="background_light_grey">#9F9F9F</color>
+    <color name="background_grey">#494949</color>
+
+    <color name="main_1">#e65160</color>
+    <color name="main_2">#ef8762</color>
+    <color name="main_3">#f8cc67</color>
+    <color name="main_4">#a5d576</color>
+    <color name="main_5">#50d5b7</color>
+    <color name="main_6">#59c5e7</color>
+    <color name="main_7">#66a0f5</color>
+    <color name="main_8">#a58dde</color>
+    <color name="main_9">#7d8692</color>
+
 </resources>
