--- a/presentation/src/main/res/values/styles.xml
+++ b/presentation/src/main/res/values/styles.xml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!-- Base application theme. -->
+    <style name="Theme.MorningIsMiracle" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/main_6</item>
+        <item name="colorPrimaryDark">@color/main_6</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">@color/white</item>
+        <item name="colorAccent">@color/main_9</item>
+        <!-- Customize your theme here. -->
+    </style>
+
     <style name="CalendarDayText" parent="TextAppearance.AppCompat.Medium">
         <item name="android:textSize">10sp</item>
         <item name="android:layout_gravity">left|top</item>
@@ -7,4 +18,5 @@
         <item name="android:paddingLeft">2dp</item>
         <item name="android:textColor">@color/black</item>
     </style>
+
 </resources>
