[MIM-9] Material Design Bottom Navigation 적용하기
- menu recource 생성
- layout.xml 에 bottom navigation 사용하기
- Navigation Item Select Listener 달기
- 디자인 커스텀 하기 styles 적용

정리된 notion - https://elfin-fin-b6d.notion.site/Bottom-navigation-Material-Design-c29d4742158d484d974b77c9e68052dd

--- a/presentation/src/main/res/layout/activity_main.xml
+++ b/presentation/src/main/res/layout/activity_main.xml
@@ -12,10 +12,23 @@
             android:id="@+id/fragmentContainerView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomNavigation"
+            style="@style/Widget.App.BottomNavigationView"
+            android:layout_width="match_parent"
+            android:layout_height="65dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            app:labelVisibilityMode="labeled"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:menu="@menu/bottom_navigation_menu" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
