[MIM-13] TagFragment UI, 각 Fragment의 Title UI 개발
임시 Mock data로 TagFragment UI 를 개발
각 Fragment의 Title UI 개발
Tag RecyclerView를 위한 Adapter 구현

TODO - recycler view 경계 자연스럽게 구현하기

--- a/presentation/src/main/res/layout/fragment_home.xml
+++ b/presentation/src/main/res/layout/fragment_home.xml
@@ -1,10 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/main_1">
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/planTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/titleTextMarginStart"
+            android:layout_marginTop="@dimen/titleTextMarginTop"
+            android:text="@string/planTitleToday"
+            android:textSize="@dimen/titleTextSize"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toStartOf="@id/planTitleDate"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_chainStyle="packed"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/planTitleDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:text="@string/planTitleData"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@id/planTitle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toEndOf="@id/planTitle" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
