[MIM-19] home화면 계획 RecyclerView 생성
Home 화면에 계획을 나열하기 위한 RecyclerView를 생성한다.

--- a/presentation/src/main/res/layout/fragment_home.xml
+++ b/presentation/src/main/res/layout/fragment_home.xml
@@ -32,5 +32,18 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@id/planTitle" />
 
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/planRecyclerView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginStart="@dimen/contentsMarginHorizontal"
+            android:layout_marginTop="@dimen/contentsMarginVertical"
+            android:layout_marginEnd="@dimen/contentsMarginHorizontal"
+            android:overScrollMode="never"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/planTitle" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
