[MIM-27] Tag 추가하기 Bottom Sheet UI 구현
- BottomSheetDialogFragment 를 이용하여 Bottom Sheet구현
- Material Text fields 사용
- ColorList RecyclerView로 구현
- DiffUtil을 사용하나 Color 선택시 notifyDataSetChanged 를 호출한다 data가 하나씩만 바뀌는데 뷰를 모두 다시그려야하기때문
- BottomSheetDialogFragment round corner style 적용

--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -13,7 +13,8 @@
     <color name="main_6">#53ADCA</color>
     <color name="main_7">#5A8CD5</color>
     <color name="main_8">#9E89D1</color>
-    <color name="main_9">#7d8692</color>
+    <color name="main_9">#DCA1D4</color>
+    <color name="main_10">#7d8692</color>
 
     <color name="state_fail">#C63D4A</color>
     <color name="state_cancel">#CCA73C</color>
