--- a/presentation/src/main/res/values-v23/styles.xml
+++ b/presentation/src/main/res/values-v23/styles.xml
@@ -7,10 +7,13 @@
         <item name="colorPrimaryVariant">@color/main_6</item>
         <item name="colorOnPrimary">@color/black</item>
         <item name="colorPrimaryDark">@color/black</item>
-        <item name="colorAccent">@color/main_3</item>
+        <item name="colorAccent">@color/main_6</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor">@color/white</item>
         <!--Status Bar 글자색깔 true 블랙 false 화이트-->
         <item name="android:windowLightStatusBar">true</item>
+
+        <!-- Customize your theme here. -->
+        <item name="bottomSheetDialogTheme">@style/AppBottomSheetDialogTheme</item>
     </style>
 </resources>
