[MIM-29] Tag 생성, 삭제, 색상 업데이트 구현
 Tag 탭에 local db를 이용하여 tag를 생성, 삭제 , 색상 업데이트 로직을 구현한다.

- 각 useCase생성
- tagRepository 구현
- ViewModel 구현하여 UI에서 호출하기
- observe하여 UI 변경
- 색상 update를 위한 bottom sheet 변경
- BottomSheetDialogFragment 생성시 argument 전달을 위한 newInstance 생성

[FIXME] StateFlow observe 부분에서 데이터 누락이 보임.. 해결 필요..

--- a/presentation/src/main/res/layout/fragment_tag.xml
+++ b/presentation/src/main/res/layout/fragment_tag.xml
@@ -34,6 +34,36 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tagTitle" />
 
+        <ImageView
+            android:id="@+id/noTagImageView"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_marginStart="@dimen/contentsMarginHorizontal"
+            android:layout_marginTop="@dimen/contentsMarginVertical"
+            android:layout_marginEnd="@dimen/contentsMarginHorizontal"
+            android:src="@drawable/ic_tag_label"
+            app:layout_constraintBottom_toTopOf="@id/noTagTextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tagTitle"
+            app:layout_constraintVertical_chainStyle="packed" />
+
+        <TextView
+            android:id="@+id/noTagTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/contentsMarginHorizontal"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="@dimen/contentsMarginHorizontal"
+            android:gravity="center"
+            android:textSize="13sp"
+            android:text="@string/noTagText"
+            app:layout_constraintBottom_toTopOf="@id/addTagBtn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/noTagImageView" />
+
+
         <androidx.cardview.widget.CardView
             android:id="@+id/addTagBtn"
             android:layout_width="0dp"
