--- a/presentation/src/main/res/layout/bottom_sheet_add_tag.xml
+++ b/presentation/src/main/res/layout/bottom_sheet_add_tag.xml
@@ -22,10 +22,14 @@
             android:id="@+id/tagInputField"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="60dp"
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="10dp"
             android:hint="@string/addTagHintText"
+            app:errorEnabled="true"
+            app:errorIconDrawable="@drawable/ic_error"
+            app:errorIconTint="@color/main_1"
+            app:errorTextColor="@color/main_1"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/addTagBottomSheetTitle"
@@ -34,6 +38,8 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:inputType="text"
+                android:lines="1"
                 android:textColorHighlight="@color/main_5"
                 android:textSize="13sp" />
 
