--- a/presentation/src/main/res/layout/fragment_plan.xml
+++ b/presentation/src/main/res/layout/fragment_plan.xml
@@ -21,75 +21,143 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/addTagBtn"
+        <androidx.core.widget.NestedScrollView
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="31dp"
+            android:layout_height="0dp"
             android:layout_marginTop="@dimen/contentsMarginVertical"
-            android:layout_marginEnd="31dp"
-            android:layout_marginBottom="@dimen/contentsMarginVertical"
-            app:cardBackgroundColor="@color/white"
-            app:cardCornerRadius="20dp"
-            app:cardElevation="3dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/planTitle"
-            app:layout_constraintVertical_bias="0.0">
+            app:layout_constraintTop_toBottomOf="@id/planTitle">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
-                <TextView
-                    android:id="@+id/dateTextView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="25dp"
-                    android:textSize="20sp"
-                    app:layout_constraintBottom_toTopOf="@+id/calendarView"
-                    app:layout_constraintStart_toStartOf="parent"
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="1dp"
+                    android:background="@color/background_light_grey"
+                    android:layout_marginHorizontal="20dp"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:text="2022년 12월" />
-
-                <ImageView
-                    android:id="@+id/calendarLeftBtn"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:src="@drawable/ic_baseline_arrow_left"
-                    app:layout_constraintBottom_toTopOf="@id/calendarView"
-                    app:layout_constraintEnd_toStartOf="@id/calendarRightBtn" />
-
-                <ImageView
-                    android:id="@+id/calendarRightBtn"
-                    android:layout_width="40dp"
-                    android:layout_height="40dp"
-                    android:layout_marginEnd="20dp"
-                    android:src="@drawable/ic_baseline_arrow_right"
-                    app:layout_constraintBottom_toTopOf="@id/calendarView"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" />
 
-                <com.prolificinteractive.materialcalendarview.MaterialCalendarView
-                    android:id="@+id/calendarView"
-                    android:layout_width="match_parent"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/calendarCardView"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginEnd="5dp"
-                    android:layout_marginBottom="5dp"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/dateTextView"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:mcv_dateTextAppearance="@style/CalendarDayText"
-                    app:mcv_showOtherDates="decorated_disabled"
-                    app:mcv_tileHeight="62dp" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.0">
+
+                    <TextView
+                        android:id="@+id/dateTextView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:layout_marginTop="25dp"
+                        android:textSize="20sp"
+                        app:layout_constraintBottom_toTopOf="@+id/calendarView"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        tools:text="2022년 12월" />
+
+                    <ImageView
+                        android:id="@+id/calendarLeftBtn"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:src="@drawable/ic_baseline_arrow_left"
+                        app:layout_constraintBottom_toTopOf="@id/calendarView"
+                        app:layout_constraintEnd_toStartOf="@id/calendarRightBtn" />
+
+                    <ImageView
+                        android:id="@+id/calendarRightBtn"
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:layout_marginEnd="20dp"
+                        android:src="@drawable/ic_baseline_arrow_right"
+                        app:layout_constraintBottom_toTopOf="@id/calendarView"
+                        app:layout_constraintEnd_toEndOf="parent" />
+
+                    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
+                        android:id="@+id/calendarView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="5dp"
+                        android:layout_marginTop="8dp"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginBottom="5dp"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintLeft_toLeftOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
+                        app:layout_constraintTop_toBottomOf="@id/dateTextView"
+                        app:mcv_dateTextAppearance="@style/CalendarDayText"
+                        app:mcv_showOtherDates="decorated_disabled"
+                        app:mcv_tileHeight="60dp" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+                <View
+                    android:id="@+id/bottomSheetViewShadow"
+                    android:layout_width="0dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="-32dp"
+                    android:background="@drawable/bottom_sheet_top_shadow"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/calendarCardView" />
+
+                <View
+                    android:id="@+id/bottomSheetView"
+                    android:layout_width="0dp"
+                    android:layout_height="20dp"
+                    android:background="@drawable/bottom_sheet_background"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/calendarCardView" />
+
+                <View
+                    android:id="@+id/bottomSheetViewHandle"
+                    android:layout_width="50dp"
+                    android:layout_height="4dp"
+                    android:background="@drawable/dot_circle"
+                    android:layout_marginTop="10dp"
+                    android:backgroundTint="@color/background_light_grey"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@id/bottomSheetView" />
+
+                <TextView
+                    android:id="@+id/planListThatDayTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:text="2022년 3월 15일 계획"
+                    android:textColor="@color/background_grey"
+                    android:textSize="15sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/bottomSheetViewHandle" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/calendarTabPlanList"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="26dp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginEnd="26dp"
+                    android:nestedScrollingEnabled="false"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/planListThatDayTitle" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.cardview.widget.CardView>
+
+        </androidx.core.widget.NestedScrollView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
