--- a/presentation/src/main/res/layout/fragment_home.xml
+++ b/presentation/src/main/res/layout/fragment_home.xml
@@ -27,7 +27,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="3dp"
             android:text="@string/planTitleData"
-            android:textSize="14sp"
+            android:textSize="15sp"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@id/planTitle"
             app:layout_constraintTop_toBottomOf="@id/planTitle" />
@@ -40,7 +40,9 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="@dimen/contentsMarginHorizontal"
             android:overScrollMode="never"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp"
+            app:layout_constraintBottom_toTopOf="@id/addPlanBtn"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
