--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -21,4 +21,7 @@
     <color name="state_success">#639E27</color>
     <color name="state_total">#2754A1</color>
 
+    <color name="plan_success">#EBF4E2</color>
+    <color name="plan_cancel">#F8E9EA</color>
+
 </resources>
